[package]
name = "syzygy-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
inquire = { git = "https://github.com/jklsnt/enquire.git", branch = "main", features = ["date"]}
serde_json = "1.0.78"
sscanf = "0.2.1"
structopt = "0.3.26"
syzygy = "0.0.6"
uuid = "0.8.2"
